package com.sbnz.vehicleassessment.model;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;

@Data
@NoArgsConstructor
@AllArgsConstructor
public class Objasnjenje {
    private String korak;
    private String opis;
}
