package com.sbnz.vehicleassessment.model.bc;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;

@Data
@NoArgsConstructor
@AllArgsConstructor
public class KriticniSklop {
    private String sklop;
}
